# lbm

./: CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ECONOMICS.md  PRODUCTION_READINESS_PLAN.md
examples/: claude_code_agent.py  multi_agent_demo.py
examples/agentic_playground/: README.md  orchestrator.py  pyproject.toml
examples/agentic_playground/agents/: base.py
examples/agentic_playground/lbm/: coordinator.py
examples/basic/: multi_agent_demo.py
lb/: __init__.py  __main__.py  chain.py  config.py  context_graph.py  discovery.py  key_encryption.py  latent.py  mcp.py  node.py  p2p.py  sync_daemon.py
scripts/: start_mesh.sh
tests/: test_edge_cases.py  test_multi_agent.py
