[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-playground"
version = "0.1.0"
description = "Multi-Agent Coordination System powered by Claude Agent SDK and Learning Batteries Market"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agentic-playground = "agentic_playground.cli:main"

[tool.setuptools]
packages = [
    "agentic_playground",
    "agentic_playground.agents",
    "agentic_playground.infra",
    "agentic_playground.lbm",
]
package-dir = {"agentic_playground" = "."}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
